recreated project with vite + vue3 + ts + vueflow

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>OpenBIMRL-Creator</title>
-
-        <!-- application style -->
-        <link rel="stylesheet" href="./dist/app.css" /> 
-        
-        <!-- import es6 module in main.js -->
-
-    </head>
-
-   <body>
-
-        <!-- Vue entypoint -->
-        <div id="app">
-            <Mainframe></Mainframe>
-        </div>
-
-        <script src="./dist/app.js"></script>
-
-   </body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue + TS</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
